--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,25 +1,30 @@
-name: generate github-contribution-grid-snake
+name: Generate Snake
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    schedule:
+        - cron: "0 0,6,12 * * *"
+    workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: Platane/snk@v3
-        with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/output/github-contribution-grid-snake.svg
-            dist/output/github-contribution-grid-snake-dark.svg?palette=github-dark
+    build:
+        runs-on: ubuntu-latest
 
-      - name: Push the generated snake svg to the output directory on master branch
-        uses: crazy-max/ghaction-github-pages@v4
-        with:
-          target_branch: output
-          build_dir: dist/output
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2.3.4
+
+            - name: generate github-contribution-grid-snake.svg
+              uses: Platane/snk/svg-only@v3
+              with:
+                  github_user_name: ${{ github.repository_owner }}
+                  outputs: |
+                      assets/github-contribution-grid-snake.svg
+                      assets/github-contribution-grid-snake-dark.svg?palette=github-dark
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
+            - name: Push to GitHub
+              uses: EndBug/add-and-commit@v7.2.1
+              with:
+                  branch: master
+                  message: "Generate Contribution Snake"
