更新 snake.yml，添加推送触发器

--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,6 +1,10 @@
 name: Generate Snake
 
 on:
+  push:
+   branches: [ "main" ]
+  pull_request:
+   branches: [ "main" ]
   schedule:
     - cron: "0 0,6,12 * * *"
   workflow_dispatch:
